# biosynfoni

./: .gitignore  CONTRIBUTING.md  LICENCE  LICENSE  README.md  biosyn_distance_comparison.py  cOnVERTure.py  concerto_fp.py  def_biosynfoni.py  fingerprints.py  inoutput.py  main.py  npc_ifier.py  pyproject.toml  rdkfnx.py  setup.py  tsne.py  vendor.yml  wiki_combine.py  zincfilter.py
.github/workflows/: test-biosynfoni.yml
biosynformatic_analysis/: get_coco_taxonomy.py  metacyc_better_taxonomy.py  metacyc_extract.py
experiments/: 0_prep_data.py  1_fingerprints.py  2_biosynthetic_distance.py  3_classification.py  4_visualisations.ipynb  allfp_er.py  analysis_pipeline.py  avger.py  biostylefoni.mplstyle  biosyn_distance_comparison.py  chem_space_pca.py  chemical_space.py  classification_stratified.py  classification_v2.py  clustermap.py  cooccurrence.py  create_umap.py  distance_matrix.py  experiments.py  experiments.sh  explore.py  figures.py  fp_avger.py  get_coco_taxonomy.py  get_npclassifier_predictions.py  helper.py  importances_histogram.py  intrafingerprint.py  metacyc_extract.py  ncbi_treer.py  nonnp_getter.py  npc_ifier.py  pmi.py  sdf_chebi_filter.py  sdf_stats.py  sdf_to_prop.py  similarity_metric_testing.ipynb  tsne.py  wiki_combine.py
experiments/0_input_preparation/: chebi.py  coconut.py  get_all_fps.py  get_fps.py  metacyc.py  zinc.py
experiments/1_analysis/: 0_biosynthetic_distance.py  chains.ipynb  predict.py
experiments/2_figure_scripts/: 0_pmi.py  1_fp_visualisations.py  2_biosynthetic_distance.py  3_clustermap.py  4_umap.py  5_tsne.py  6_rf_importances.py
experiments/biosynthetic_distance/: _inner_coco_metacyc.py  _metacyc_to_chains.py  inner_coco_metacyc.py  metacyc_extract.py  metacyc_to_chains.py
experiments/classification/: predict.py  rf.py  sdf_chebi_filter.py
experiments/figure_producing/: biosynthetic_distance.py  clustermap.py  fp_avger.py  fp_visualisations.py  get_coco_taxonomy.py  tsne.py
experiments/input_preparation/: chebi.py  coconut.py  extract_synthetic.py  get_npclassifier.py
experiments/ml/: confusion_heatmap.py  (+2 more)
src/: __init__.py  biosyn_distance_comparison.py  concerto_fp.py  def_biosynfoni.py  figuremaking.py  fingerprints.py  inoutput.py  metacyc_extract.py  rdkfnx.py  wiki_combine.py
tests/: figuremaking.py  main_test.py  test.py  tsne.py
(+55 files in other folders)
