[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biosynfoni"
version = "1.0.0"
description = "a *biosynformatic* fingerprint to explore natural product distance and diversity"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["bioinformatics", "cheminformatics", "metabolomics", "natural-products", "molecular-fingerprint", "metabolites", "biosynthetic-distance"]
authors = [{name = "Lucina-May Nollen"}]
maintainers =[{name = "Lucina-May Nollen"}]

dependencies = [
    "numpy",
    "rdkit",
    "tqdm",
]

[project.optional-dependencies]
test = ["matplotlib"]
experiments = [
    "matplotlib",
    "pandas",
    "scikit-learn>=1.3.0",
    "umap-learn",
    "seaborn",
    "requests",
    "networkx",
    "scipy",
    "jupyter",
]
dev = [
    "pytest",
]

[project.urls]
"homepage" = "https://github.com/lucinamay/biosynfoni"

[project.scripts]
biosynfoni = "biosynfoni.concerto_fp:main"
